--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Timer -->
             <div class="timer-container">
                 <div class="timer">
-                    <h1>07:21:45</h1>
+                    <h1 id="countdown"></h1>
                 </div>
             </div>
             <!-- Fin du timer -->
@@ -117,5 +117,6 @@
         </div>
     </div>
     <!-- Fin des shapes -->
+    <script src="app.js"></script>
 </body>
 </html>
