Update ajout de plusieurs vins
Plusieurs vins ajouter + un vin seulement est affiché par jour. Contrôler demain si c'est OK. Un peu de responsive tablette et smartphone fait.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <!-- Infos -->
             <div class="infos-container">
                 <div class="wine-title">
-                    <h1>Primitivo del Salento IGT Andante</h1>
+                    <h1><span id="wine-name"></span></h1>
                 </div>
                 <div class="wine-infos">
-                    <h3>Rouge</h3>
-                    <h3>2019</h3>
-                    <h3>Italie, pouille</h3>
-                    <h3>Nero d'avola</h3>
-                    <h3>14,5%</h3>
+                    <h3><span id="wine-type"></span></h3>
+                    <h3><span id="wine-year"></span></h3>
+                    <h3><span id="wine-region"></span></h3>
+                    <h3><span id="wine-variety"></span></h3>
+                    <h3><span id="wine-alcohol"></span></h3>
                 </div>
             </div>
             <!-- Fin des infos -->
@@ -41,7 +41,7 @@
     </div>
     <!-- Footer -->
     <div class="footer">
-        <h1>© 2024 Wine of the day | mike-chillemi.ch</h1>
+        <h1>© 2024 Wine of the day | <a href="https://www.mike-chillemi.ch/">mike-chillemi.ch</a></h1>
     </div>
     <!-- Fin du footer -->
     <!-- Shapes -->
